# stock

./: .gitignore  2026-01-24-bnai.md  ARCHITECTURE.md  CLAUDE.md  HANDOFF.md  HANDOFF_realtime.md  HANDOFF_v2.md  PLAN_v2_scanner.md  PRD.md  TODO.md  day_trader_scanner.py  db.py  deep_analyzer.py  generate_icons.py  portfolio.md  pyproject.toml  read_briefing.py  requirements.txt  schemas.py  scrape_blog.py  stock_collector.py  swing_long_scanner.py  tasks.yaml
api/: __init__.py  announcements.py  auth.py  brokerage.py  chart.py  embeddings.py  glossary.py  indicators.py  main.py  notifications.py  portfolio.py  profile.py  realtime.py  reports.py  trades.py  watchlist.py
api/seeds/: create_glossary_table.sql  glossary_data.py  insert_glossary.py
daily/: BNAI_2026-01-25.md  BOXL_2026-01-26.md  GLSI_2026-01-25.md  GRRR_2026-01-25.md  HCTI_2026-01-25.md  스캐너_로직_분석_2026-01-26.md
docs/: PRD_daily-stock-story.md
docs/plans/: 2026-01-24-v1.1-auth-design.md  PLAN_daily-stock-story-webapp.md  PLAN_v1.1-features.md
lib/: __init__.py  base.py  borrow.py  catalysts.py  darkpool.py  institutional.py  news.py  news_vectors.py  options.py  regsho.py  sec.py  sec_patterns.py  social.py  technicals.py
reports/templates/: report.css
scanners/: __init__.py  day_scanner.py  full_market_scanner.py  long_scanner.py  news_collector.py  runner.py  scoring.py  screener.py  squeeze_scanner.py  storage.py  swing_scanner.py
tests/unit/: test_embeddings.py  test_glossary.py
web/: package-lock.json  package.json  vite.config.ts
web/src/: app.html  service-worker.ts
(+27 files in other folders)
